# ai-find-similar-objects

./: .gitignore  .lefthook.yml  README.md
backend/qdrant/: .env.example  docker-compose.yml  justfile
backend/rustus/: .env.example
backend/rustus-server/: justfile
backend/yolo-inference/: .gitignore  Cargo.toml  README.md  images.txt
backend/yolo-inference/src/: main.rs
frontend/: .env.example  app.py  justfile  pyproject.toml
